# freqtrade-agent

./: .gitignore  Dockerfile  README.md  README.zh-CN.md  docker-compose.agent.yml  pyproject.toml
scripts/: setup_wizard.py
tests/agent/: conftest.py  test_api.py  test_chart_plugin.py  test_config.py  test_db.py  test_freqtrade_l0_tools.py  test_registry.py  test_runtime_utils.py  test_setup_wizard.py  test_telegram_dashboard_plugin.py  test_trading_copilot_language.py  test_verifier.py
tools/: freqtrade_agent_server.py
tools/agent_platform/: README_MIDTERM_ACCEPTANCE.md  TRADING_AGENT.md  __init__.py  agent_llm.env.example  config.py  llm_client.py  main.py  monitor.py  runtime_utils.py  scheduler.py
tools/agent_platform/agents/: trading_copilot.py  verifier.py
tools/agent_platform/plugins/: __init__.py  agent_meta_plugin.py  chart_plugin.py  freqtrade_plugin.py  logs_plugin.py  macro_plugin.py  market_plugin.py  memory_plugin.py  monitor_plugin.py  report_agent.py  scheduler_plugin.py  telegram_dashboard_plugin.py  verifier_plugin.py  web_plugin.py
tools/agent_platform/registry/: __init__.py  permissions.py  tool_registry.py
tools/agent_platform/schemas/: tool_outputs.py
tools/agent_platform/storage/: db.py
user_data/: agent_llm.env.example  config.example.json
