[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "freqtrade-agent"
version = "0.1.0"
description = "Local controlled Trading Copilot Agent for Freqtrade REST API"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.110",
    "Pillow>=10",
    "pydantic>=2",
    "uvicorn[standard]>=0.27",
]

[project.optional-dependencies]
dev = [
    "httpx>=0.27",
    "pytest>=8",
    "pytest-asyncio>=0.23",
    "ruff>=0.6",
]

[project.scripts]
freqtrade-agent = "agent_platform.main:run"

[tool.setuptools]
package-dir = {"" = "tools"}

[tool.setuptools.packages.find]
where = ["tools"]

[tool.setuptools.package-data]
agent_platform = ["TRADING_AGENT.md", "agent_llm.env.example"]

[tool.pytest.ini_options]
testpaths = ["tests/agent"]
pythonpath = ["tools"]
asyncio_mode = "strict"

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "B", "C901"]
ignore = ["E501", "I001"]
